# livraria-drf

./: db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor_alter_editora_options.py  0002_usuario_cpf.py  0003_livro.py  0003_remove_usuario_name_usuario_first_name_and_more.py  0004_alter_livro_isbn.py  0004_usuario_rg.py  0005_livro_autores.py  0005_livro_capa.py  0006_compra.py  0007_alter_compra_status.py  0008_itenscompra.py  0009_alter_compra_status.py  0010_alter_compra_status.py  0011_alter_categoria_options_alter_editora_site.py  0012_alter_editora_site.py
core/models/: __init__.py  categoria.py  compra.py  editora.py  usuario.py
core/serializers/: __init__.py  compra.py  editora.py  livro.py
core/views/: __init__.py  categoriaAPIView.py  categoriaClass.py  categoriaGeneric.py  livro.py  testes_iniciais.py
livraria/: settings.py  urls.py
media/migrations/: 0001_initial.py
static/: staticfiles.json
